--- a/cogl/cogl-pango/ukwm-cogl-pango.pc.in
+++ b/cogl/cogl-pango/ukwm-cogl-pango.pc.in
@@ -8,6 +8,6 @@ requires=@COGL_PKG_REQUIRES@ ukwm-cogl-@LIBUKWM_API_VERSION@
 Name: Cogl
 Description: An object oriented GL/GLES Abstraction/Utility Layer
 Version: @UKWM_VERSION@
-Libs: -L${libdir} -lukwm-cogl-pango-@LIBUKWM_API_VERSION@
+Libs: -L${libdir} -lukwm-cogl-pango-${apiversion}
 Cflags: -I${includedir}/cogl
 Requires: ${requires}
